--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <canvas id="canvas"></canvas>
     <pre id="log"></pre>
     <span id="tooltip"></span>
+    <span id="tooltip2"></span>
     <script type="module" src="./globals.js"></script>
     <script type="module" src="./player.js"></script>
     <script type="module" src="./map.js"></script>
